# small_project

./: LICENSE  README.md
backend/: main.py  models.py  pyproject.toml  social_network.db
database/: schema.sql  seed_data.sql
frontend/: app.js  index.html
